# Biosimulators_utils

./: .all-contributorsrc  .flake8  .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  MANIFEST.in  README.md  pyproject.toml  requirements.optional.txt  requirements.txt  setup.py
.github/workflows/: build.yml  ci.yml  release.yml
biosimulators_utils/: __init__.py  __main__.py  _version.py  combine.py  config.py  data_model.py  exceptions.py  globals.py  image.py  utils.py  warnings.py  wip_config.py
biosimulators_utils/archive/: data_model.py  io.py  utils.py
biosimulators_utils/biosimulations/: data_model.py  utils.py
biosimulators_utils/cellml/: validation.py
biosimulators_utils/combine/: data_model.py  exceptions.py  exec.py  io.py  utils.py  validation.py  warnings.py
biosimulators_utils/exec_status/: data_model.py  utils.py
biosimulators_utils/gh_action/: core.py  data_model.py
biosimulators_utils/kisao/: core.py  data_model.py  utils.py  warnings.py
biosimulators_utils/lems/: validation.py
biosimulators_utils/licensing/: core.py  gurobi.py
biosimulators_utils/log/: data_model.py  utils.py  warnings.py
biosimulators_utils/neuroml/: validation.py
biosimulators_utils/omex_meta/: data_model.py  io.py  utils.py  validation.py
biosimulators_utils/plot/: data_model.py  io.py  warnings.py
biosimulators_utils/ref/: data_model.py  utils.py
biosimulators_utils/report/: data_model.py  io.py  warnings.py
biosimulators_utils/sbml/: utils.py  validation.py
biosimulators_utils/sedml/: data_model.py  exceptions.py  exec.py  io.py  math.py  model_utils.py  utils.py  validation.py  warnings.py
biosimulators_utils/simulator/: cli.py  data_model.py  environ.py  exceptions.py  exec.py  io.py  register.py  specs.py  utils.py  warnings.py
biosimulators_utils/simulator_registry/: data_model.py  process_submission.py  query.py  submit.py
biosimulators_utils/spatial/: data_model.py  exec.py  io.py  utils.py
biosimulators_utils/utils/: core.py  identifiers_org.json  identifiers_org.py  logging.py
biosimulators_utils/viz/: data_model.py  io.py  utils.py  warnings.py
biosimulators_utils/xml/: utils.py
docs/: .buildinfo  about.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorial_api.html  tutorial_cli.html
docs-src/: about.rst  conf.py  index.rst  installation.rst  tutorial_api.rst  tutorial_cli.rst  utils.rst
docs/_static/: documentation_options.js
docs/source/: biosimulators_utils.archive.html  biosimulators_utils.biosimulations.html  biosimulators_utils.cellml.html  biosimulators_utils.combine.html  biosimulators_utils.exec_status.html  biosimulators_utils.gh_action.html  biosimulators_utils.html  biosimulators_utils.kisao.html  biosimulators_utils.lems.html  biosimulators_utils.licensing.html  biosimulators_utils.log.html  biosimulators_utils.model_lang.bngl.html  biosimulators_utils.model_lang.cellml.html  biosimulators_utils.model_lang.html  biosimulators_utils.model_lang.lems.html  biosimulators_utils.model_lang.neuroml.html  biosimulators_utils.model_lang.rba.html  biosimulators_utils.model_lang.sbml.html  biosimulators_utils.model_lang.smoldyn.html  biosimulators_utils.model_lang.xpp.html  biosimulators_utils.neuroml.html  biosimulators_utils.omex_meta.html  biosimulators_utils.plot.html  biosimulators_utils.ref.html  biosimulators_utils.report.html  biosimulators_utils.sbml.html  biosimulators_utils.sedml.html  biosimulators_utils.simulator.html  biosimulators_utils.simulator_registry.html  biosimulators_utils.utils.html  biosimulators_utils.viz.html  biosimulators_utils.viz.vega.escher.html  biosimulators_utils.viz.vega.ginml.html  biosimulators_utils.viz.vega.html  biosimulators_utils.viz.vega.sbgn.html  biosimulators_utils.xml.html
tests/: requirements.txt  test_config.py  test_data_model.py  test_image.py  test_main.py  test_utils.py
tests/archive/: test_archive_data_model.py  test_archive_io.py
tests/biosimulations/: test_biosimulations_data_model.py  test_biosimulations_utils.py
tests/cellml/: test_cellml_validation.py
tests/combine/: test_combine_data_model.py  test_combine_exec.py  test_combine_io.py  test_combine_utils.py  test_combine_validation.py
tests/exec_status/: test_exec_status_utils.py
tests/fixtures/: BIOMD0000000297-params-vars.xml  BIOMD0000000297.omex  BIOMD0000000297.xml  BIOMD0000000297_bad_change_att.sedml  BIOMD0000000297_change_bad_xpath.sedml  BIOMD0000000297_change_good_xpath.sedml  BIOMD0000000297_compchange_and_attchange_bad_xpath_.sedml  BIOMD0000000297_compchange_bad_xpath.sedml  BIOMD0000000297_nochange_bad_xpath.sedml  BIOMD0000000297_nochange_good_xpath.sedml  BIOMD0000000297_repeat_bad_xpath_change.sedml  BIOMD0000000297_repeat_bad_xpath_nochange.sedml  BIOMD0000000297_repeat_good_xpath_change.sedml  BIOMD0000000297_repeat_good_xpath_nochange.sedml  Chaouiya-BMC-Syst-Biol-2013-EGF-TNFa-signaling-params-vars.xml  Chaouiya-BMC-Syst-Biol-2013-EGF-TNFa-signaling.xml  Ciliberto-J-Cell-Biol-2003-morphogenesis-checkpoint.omex  combine-formats.csv  invalid-parent-format-in-manifest.omex  manifest-in-manifest.omex  missing-parent-in-manifest.omex  multiple-manifests.omex  multiple-updated-dates.omex  no-metadata.omex  sbml-invalid-model.xml  sbml-list-of-species-lvl-2.xml  sbml-list-of-species-lvl-3.xml  sbml-list-of-species.xml  sbml-three-species.xml  tellurium.json
tests/gh_action/: test_gh_action_core.py
tests/kisao/: test_kisao_core.py  test_kisao_utils.py
tests/lems/: test_lems_validation.py
tests/licensing/: test_licensing_gurobi.py
tests/log/: test_exec_status_data_model.py  test_exec_status_utils.py  test_log_data_model.py  test_log_utils.py
tests/neuroml/: test_neuroml_validation.py
tests/omex_meta/: test_omex_meta_io.py  test_omex_meta_utils.py  test_omex_meta_validation.py
tests/plot/: test_plot_io.py
tests/ref/: test_ref_data_model.py  test_ref_utils.py
tests/report/: test_report_io.py
tests/sbml/: test_sbml_utils.py  test_sbml_validation.py
tests/sedml/: test_model_utils.py  test_sedml_data_model.py  (+6 more)
(+185 files in other folders)
