[tool.poetry]
name = "biosimulators-utils"
version = "0.1.188"
description = "description"
license = "MIT"
authors = ["Center for Reproducible Biomedical Modeling <info@biosimulators.org>"]
readme = "README.md"
homepage = "https://github.com/biosimulators/Biosimulators_utils"
repository = "https://github.com/biosimulators/Biosimulators_utils"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
keywords = ["systems", "biology", "modeling", "simulation"]
include = [
    { path = "biosimulators_utils/utils/identifiers_org.json", format = ["sdist", "wheel"] },
    { path = "biosimulators_utils/model_lang/cellml/*.rng", format = ["sdist", "wheel"] },
    { path = "biosimulators_utils/viz/vega/**/*.json", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = "^3.10"
appdirs = "^1.4.4"
biopython = "^1.84"
cement = "^3.0.10"
evalidate = ">=2.0.0"
h5py = "^3.11.0"
kisao = ">=2.33"
lxml = "^5.3.0"
matplotlib = "^3.9.2"
mpmath = "^1.3.0"
natsort = "^8.4.0"
networkx = ">=2.6"
numpy = "^2.1.0"
openpyxl = "^3.1.5"
pandas = "^2.2.2"
pronto = ">=2.4"
pyomexmeta = ">=1.2.13"
python-dateutil = "^2.9.0.post0"
python-libcombine = ">=0.2.11"
python-libsedml = ">=2.0.16"
pyyaml = "^6.0.2"
rdflib = "^7.0.0"
regex = "^2024.7.24"
requests = "^2.32.3"
setuptools = "^74.0.0"
simplejson = "^3.19.3"
termcolor = "^2.4.0"
uritools = "^4.0.3"
yamldown = "^0.1.8"

[tool.poetry.group.dev.dependencies]
capturer = "^3.0"
docker = "^7.1.0"
bezier = "^2024.6.20"
flake8 = "^7.1.1"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[tool.poetry.group.bngl]
optional = true
dependencies = { bionetgen = ">=0.7.2" }

[tool.poetry.group.cellml]
optional = true
dependencies = { libcellml = "*" }

[tool.poetry.group.lems]
optional = true
dependencies = { pylems = "*", pyneuroml = "*", pint = "*" }

[tool.poetry.group.neuroml]
optional = true
dependencies = { libneuroml = "*", pyneuroml = ">=0.5.18" }

[tool.poetry.group.sbml]
optional = true
dependencies = { python-libsbml = "*" }

[tool.poetry.group.smoldyn]
optional = true
dependencies = { smoldyn = ">=2.66" }

[tool.poetry.group.simularium]
optional = true
dependencies = { simulariumio = "*" }

[tool.poetry.group.escher]
optional = true
dependencies = { bezier = "*" }

[tool.poetry.group.containers]
optional = true
dependencies = { docker = ">=4.4" }

[tool.poetry.group.logging]
optional = true
dependencies = { capturer = "*" }

[tool.poetry.scripts]
biosimulators-utils = "biosimulators_utils.__main__:main"

[build-system]
requires = ["poetry-core", "flake8", "pytest"]
build-backend = "poetry.core.masonry.api"
