[tool.poetry]
name = "biosimulators-utils"
version = "0.2.2"
description = "description"
license = "MIT"
authors = ["Center for Reproducible Biomedical Modeling <info@biosimulators.org>"]
readme = "README.md"
homepage = "https://github.com/biosimulators/Biosimulators_utils"
repository = "https://github.com/biosimulators/Biosimulators_utils"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
keywords = ["systems", "biology", "modeling", "simulation"]
include = [
    { path = "biosimulators_utils/utils/identifiers_org.json", format = ["sdist", "wheel"] },
    { path = "biosimulators_utils/model_lang/cellml/*.rng", format = ["sdist", "wheel"] },
    { path = "biosimulators_utils/viz/vega/**/*.json", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = "^3.10"
appdirs = "*"
biopython = "*"
cement = "*"
evalidate = ">=2.0"
h5py = "*"
kisao = ">=2.33"
lxml = "*"
matplotlib = "*"
mpmath = "*"
natsort = "*"
networkx = ">=2.6"
numpy = "*"
openpyxl = "*"
pandas = "*"
pronto = ">=2.4"
pyomexmeta = ">=1.2.13"
python-dateutil = "*"
python-libcombine = ">=0.2.11"
python-libsedml = ">=2.0.16"
pyyaml = "*"
rdflib = "*"
regex = "*"
requests = "*"
setuptools = ">=74.1.1"
simplejson = "*"
termcolor = "*"
uritools = "*"
yamldown = "*"
# Optional Dependenceis
bionetgen = {version = ">=0.8.4", optional = true}
libroadrunner = {version = ">=2.7.0, <3.0.0", optional = true}
libcellml = {version = ">=0.5.0", optional = true}
pylems = {version = "*", optional = true}
pyneuroml = {version = ">=0.5.18", optional = true}
pint = {version = "*", optional = true}
libneuroml = {version = "*", optional = true}
#rbapy = { git = "https://github.com/biosimulators/RBApy.git", rev="d82e1ade319cb503f6e28759a0cbeffccabd89e8", optional = true }
python-libsbml = {version = "*", optional = true}
smoldyn = {version = ">=2.66", optional = true}
simulariumio = {version = "*", optional = true}
bezier = {version = "*", optional = true}
docker = {version = ">=4.4", optional = true}
capturer = {version = "*", optional = true}


[tool.poetry.group.dev.dependencies]
capturer = "^3.0"
docker = "^7.1.0"
bezier = "*"
flake8 = "^7.1.1"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
flaky = "^3.8.1"
jsonschema = "^4.23.0"

[tool.poetry.group.docs.dependencies]
pydata-sphinx-theme = "*"  # for building documentation
sphinx = ">=1.8"
sphinxprettysearchresults = { git = "https://github.com/biosimulators/sphinx-pretty-searchresults.git" }

[tool.poetry.extras]
bngl = ["libroadrunner", "bionetgen"]
cellml = ["libcellml"]
lems = ["pylems", "pyneuroml", "pint"]
neuroml = ["libneuroml", "pyneuroml"]
rba = ["rbapy"]
sbml = ["python-libsbml"]
smoldyn = ["smoldyn"]
simularium = ["simulariumio"]
escher = ["bezier"]
containers = ["docker"]
logging = ["capturer"]

[tool.poetry.group.bngl]
optional = true
dependencies = { bionetgen = ">=0.8.4" }

[tool.poetry.group.cellml]
optional = true
dependencies = { libcellml = ">=0.5.0" }

[tool.poetry.group.lems]
optional = true
dependencies = { pylems = "*", pyneuroml = "*", pint = "*" }

[tool.poetry.group.neuroml]
optional = true
dependencies = { libneuroml = "*", pyneuroml = ">=0.5.18" }

#[tool.poetry.group.rba]
#optional = true
## in requirements.optional.txt, rbapy was specified as:
##
## [rba]
## python -m pip install git+https://github.com/biosimulators/RBApy.git#egg=rbapy
##
# dependencies = { rbapy = { git = "https://github.com/biosimulators/RBApy.git", rev="d82e1ade319cb503f6e28759a0cbeffccabd89e8" } }
##
## if using official release (not biosimulators fork), use:
## dependencies = { rbapy = "*" }

[tool.poetry.group.sbml]
optional = true
dependencies = { python-libsbml = "*" }

[tool.poetry.group.smoldyn]
optional = true
dependencies = { smoldyn = ">=2.66" }

[tool.poetry.group.simularium]
optional = true
dependencies = { simulariumio = "*" }

[tool.poetry.group.escher]
optional = true
dependencies = { bezier = "*" }

[tool.poetry.group.containers]
optional = true
dependencies = { docker = ">=4.4" }

[tool.poetry.group.logging]
optional = true
dependencies = { capturer = "*" }

[tool.poetry.scripts]
biosimulators-utils = "biosimulators_utils.__main__:main"

[build-system]
requires = ["poetry-core", "flake8", "pytest"]
build-backend = "poetry.core.masonry.api"
